force-app/main/default/objects/Calendar_Date__mdt/Calendar_Date__mdt.object-meta.xml
<CustomObject>
    <description>Date configuration for LWC Special dates component</description>
    <label>Calendar Date</label>
    <pluralLabel>Calendar Dates</pluralLabel>
</CustomObject>