force-app/main/default/objects/Calendar_Date__mdt/fields/DateCharacter__c.field-meta.xml
<CustomField>
    <fullName>DateCharacter__c</fullName>
    <description>Character that will represent the date on the calendar and the legend.</description>
    <inlineHelpText>This character will be displayed on the calendar to represent the date. Can use emojis.</inlineHelpText>
    <label>Date Character</label>
    <length>1</length>
    <type>Text</type>
</CustomField>