force-app/main/default/objects/Calendar_Date__mdt/fields/DateFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>DateFieldAPIName__c</fullName>
    <description>The api name of related object (configured in parent metadata) that will be displayed on calendar.</description>
    <inlineHelpText>The api name of a date/datetime field on the related object.</inlineHelpText>
    <label>Date Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>