force-app/main/default/objects/Calendar_Date__mdt/fields/DateName__c.field-meta.xml
<CustomField>
    <fullName>DateName__c</fullName>
    <description>Single date configuration for LWC Special date calendar</description>
    <label>Date Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>