force-app/main/default/objects/Calendar_Date__mdt/fields/SequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>SequenceNumber__c</fullName>
    <description>Sequence number for displaying the date on the LWC calendar legend.</description>
    <inlineHelpText>Sequence of the item to be displayed on the legend</inlineHelpText>
    <label>Sequence Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>